Changes for 1.8.0.1
* Fixed null pointer exception in Moore AI for water based factories. (veqryn)

* Fixed bid delegate so that it will still run even if the player has no resources other than the bid amount. (veqryn)

* Fixed possible null pointer exception in Triggered Victory which is triggered from outside of the end round delegate. (veqryn)

* Making TransportTracker a static implementation to clean up the engine a little bit. (veqryn)

* Fixing various bugs in Global 1940, ww2v3, v4, v5, and v6. (veqryn)

* Created new Player Rule Attachment, "immuneToBlockade", which will prevent blockade production loss for that player. (veqryn)

* Allowed 1940's paratroopers tech (ariborne combat) to move to / attack territories that have been blitz or already conquered this turn. (veqryn)

* Allowed 1940's paratroopers tech (airborne combat) to move from allied bases, and to allow travel over water. (veqryn)

* Created new step properties for special move delegates, "airborneMove", which controls if it is an Airborne Combat move phase. (veqyrn)

* Adding some more pre-industrial sounds. (pulicat)

* Allowed muting of custom aa gun sounds and custom notification, victory, and defeat sounds. (veqryn)

* Created resource image factory for making images and icons of resources. (veqryn)

* Fixed user interface to allow purchasing resources. (veqryn)

* Fixing engine to allow purchase rules for purchasing resources. (veqryn)

* Fixed memory leak in repair rules for repairing factories. (veqryn)

* Creating a menu option in the "File" menu called "Post PBEM/PBF Gamesave...", which will for pbem games post/email the savegame to the forum, without having to wait for the end turn phase. (veqryn)

* Changing trigger "notification" to use "players". (veqryn)

* Changing unit attachment property, "repairsUnits", to allow multiple and to have repair values associated with each unit, thereby allowing units to be repaired by X amount each turn. (veqryn)
